; ModuleID = '/home/carl/AnghaBench/linux/arch/m68k/sun3/prom/extr_misc.c_prom_halt.c'
source_filename = "/home/carl/AnghaBench/linux/arch/m68k/sun3/prom/extr_misc.c_prom_halt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (...)* }

@romvec = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @prom_halt() #0 {
  %1 = alloca i64, align 8
  br label %2

2:                                                ; preds = %2, %0
  %3 = load i64, i64* %1, align 8
  %4 = call i32 @local_irq_save(i64 %3)
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @romvec, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32 (...)*, i32 (...)** %6, align 8
  %8 = call i32 (...) %7()
  %9 = load i64, i64* %1, align 8
  %10 = call i32 @local_irq_restore(i64 %9)
  br label %2
}

declare dso_local i32 @local_irq_save(i64) #1

declare dso_local i32 @local_irq_restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
